# backend/models/user.go
@@ -14,4 +14,6 @@ type User struct {
 	Role       string     `gorm:"default:user" json:"role"`
 	Token      string     `json:"token"`
 	IsVerified bool       `gorm:"default:false" json:"is_verified"`
+	Donor	   Advice	  `gorm:"foreignKey:DonorID" json:"advice_donor" constraint:OnUpdate:CASCADE,OnDelete:CASCADE;`
+	Receiver   Advice     `gorm:"foreignKey:ReceiverID" json:"advice_receiver" constraint:OnUpdate:CASCADE,OnDelete:CASCADE`
 }
